--- a/lib/ui/spirv/BUILD.gn
+++ b/lib/ui/spirv/BUILD.gn
@@ -17,6 +17,44 @@ source_set("spirv") {
 }
 
 if (enable_unittests) {
+  executable("spirv_regenerate_goldens") {
+    sources = [
+      "regenerate.cc",
+    ]
+
+    deps = [
+      ":spirv",
+    ]
+  }
+
+  action_foreach("spirv_goldens") {
+    script = "regenerate.py"
+
+    deps = [
+      ":spirv_regenerate_goldens",
+    ]
+
+    sources = [
+      "goldens/glslop.spv",
+      "goldens/scalar.spv",
+      "goldens/simple.spv",
+      "goldens/vec2op.spv",
+      "goldens/vec3op.spv",
+      "goldens/vec4op.spv",
+    ]
+
+    outputs = [
+      "$target_gen_dir/{{source_name_part}}.sksl",
+    ]
+
+    args = [
+      "./spirv_regenerate_goldens",
+      "{{source}}",
+      rebase_path(target_gen_dir, root_build_dir) +
+        "/{{source_name_part}}.sksl",
+    ]
+  }
+
   executable("spirv_unittests") {
     testonly = true
 
@@ -28,6 +66,7 @@ if (enable_unittests) {
 
     deps = [
       ":spirv",
+      ":spirv_goldens",
       "//third_party/googletest:gmock",
       "//third_party/googletest:gtest",
       "//third_party/googletest:gtest_main",
